write srt file content in a variable for processing

--- a/app/src/main/assets/6_tags.html
+++ b/app/src/main/assets/6_tags.html
@@ -1,9 +1,13 @@
 <html>
 <head>
-
+    <script type="text/javascript">
+    function seekTo(number) {
+        android.seekTo(number);
+    }
+</script>
 </head>
 <body>
-<font>HR jargon<span style="color:blue"> makes me crazy. </span></font><font>We have to have all <span style="color:blue">these stupid acronyms </span> that describe things that<span style="color:blue"> nobody understands:  </span> </font>
+<font onclick="seekTo(1);">HR jargon<span style="color:blue"> makes me crazy. </span></font><font>We have to have all <span style="color:blue">these stupid acronyms </span> that describe things that<span style="color:blue"> nobody understands:  </span> </font>
 <font>OKRs and PIPs. </font>
 <font>I think we can <span style="color:blue">run our businesses </span> by just <span style="color:blue">talking to each other </span> like <span style="color:blue">regular human beings.</span></font>
 <font>We might actually get more done. </font>
